testCases/parserTestCases/correct/expressionC.cs16
-- Carston Schilds, Feb 21st 2016

void main(void){
    x := -a;
    x := b;
    x := p < q;
    x := p <= q;
    x := p > q;
    x := p >= q;
    x := p = q;
    x := p /= q;
}